Checkpoint: Complete BiOmixVita website with all improvements from previous session: - New biomixvitalogov3.png logo throughout (header, footer, hero, favicon) - Insights page with Bridge Informatics-style blog layout, radar chart, LinkedIn share button - About Us page with BiOmixVita Team section and Chamseddine KIFAGI profile - Services page with Core OMICS Analysis expandable accordion interface - All 7 pages functional: Home, Services, Pricing, Insights, About Us, Partners, Contact - Professional design with consistent blue color scheme (#4169E1) - Responsive navigation with mobile menu - Complete footer with social links

--- a/client/index.html
+++ b/client/index.html
@@ -3,15 +3,18 @@
 
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/png" href="/favicon.png" />
+    <link rel="shortcut icon" href="/favicon.ico" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1" />
-    <title>BiOmixVita Website</title>    
-    <!-- THIS IS THE START OF A COMMENT BLOCK, BLOCK TO BE DELETED: Google Fonts here, example:
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet" />
-    THIS IS THE END OF A COMMENT BLOCK, BLOCK TO BE DELETED -->
+    <meta name="description" content="BIOmixVita - OMICS & AI solutions for healthier & more sustainable futures. Expertise in genomics, bioinformatics and artificial intelligence for innovative and environmentally friendly agriculture." />
+    <meta name="keywords" content="OMICS, AI, sustainable agriculture, genomics, bioinformatics, artificial intelligence, biotechnology, WGS, RNA-seq, molecular modeling" />
+    <meta name="author" content="BIOmixVita" />
+    <meta property="og:title" content="BIOmixVita - OMICS & AI solutions for healthier & more sustainable futures" />
+    <meta property="og:description" content="Transforming tomorrow's agriculture together through biological data science and artificial intelligence" />
+    <meta property="og:type" content="website" />
+    <title>BiOmixVita - OMICS & AI solutions for healthier & more sustainable futures</title>    
   </head>
 
   <body>
