--- a/client/index.html
+++ b/client/index.html
@@ -18,6 +18,7 @@
   </head>
 
   <body>
+    <script> (function(ss,ex){ window.ldfdr=window.ldfdr||function(){(ldfdr._q=ldfdr._q||[]).push([].slice.call(arguments));}; (function(d,s){ fs=d.getElementsByTagName(s)[0]; function ce(src){ var cs=d.createElement(s); cs.src=src; cs.async=1; fs.parentNode.insertBefore(cs,fs); }; ce('https://sc.lfeeder.com/lftracker_v1_'+ss+(ex?'_'+ex:'')+'.js'); })(document,'script'); })('YEgkB8ld6XW8ep3Z'); </script>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
     <script
