Add Cookiebot consent management - GDPR compliance

--- a/client/index.html
+++ b/client/index.html
@@ -27,8 +27,8 @@
   </head>
 
   <body>
-    <!-- Leadfeeder B2B Tracking -->
-    <script>
+    <!-- Leadfeeder B2B Tracking - Controlled by Cookiebot -->
+    <script data-cookieconsent="marketing">
       (function(ss,ex){
         window.ldfdr=window.ldfdr||function(){(ldfdr._q=ldfdr._q||[]).push([].slice.call(arguments));};
         (function(d,s){
@@ -43,6 +43,10 @@
         })(document,'script');
       })('YEgkB8ld6XW8ep3Z');
     </script>
+  
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
+  </body>
 
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
