--- a/client/index.html
+++ b/client/index.html
@@ -1,6 +1,5 @@
 <!doctype html>
 <html lang="en">
-
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/favicon.png" />
@@ -17,39 +16,20 @@
     <title>BiOmixVita - OMICS & AI solutions for healthier & more sustainable futures</title>
     
     <!-- Google Analytics 4 -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-382391679"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-34QWVC87NE"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
+      function gtag( ){dataLayer.push(arguments);}
       gtag('js', new Date());
-      gtag('config', 'G-382391679');
+      gtag('config', 'G-34QWVC87NE', {
+        'page_path': window.location.pathname,
+        'page_title': document.title,
+        'send_page_view': true
+      });
     </script>
   </head>
-
   <body>
-    <!-- Leadfeeder B2B Tracking - Controlled by Cookiebot -->
-    <script data-cookieconsent="marketing">
-      (function(ss,ex){
-        window.ldfdr=window.ldfdr||function(){(ldfdr._q=ldfdr._q||[]).push([].slice.call(arguments));};
-        (function(d,s){
-          fs=d.getElementsByTagName(s)[0];
-          function ce(src){
-            var cs=d.createElement(s);
-            cs.src=src;
-            cs.async=1;
-            fs.parentNode.insertBefore(cs,fs);
-          };
-          ce('https://sc.lfeeder.com/lftracker_v1_'+ss+(ex?'_'+ex:'')+'.js');
-        })(document,'script');
-      })('YEgkB8ld6XW8ep3Z');
-    </script>
-  
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
-
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
-
 </html>
