--- a/client/index.html
+++ b/client/index.html
@@ -15,6 +15,9 @@
     <meta property="og:type" content="website" />
     <title>BiOmixVita - OMICS & AI solutions for healthier & more sustainable futures</title>
     
+    <!-- Cookiebot -->
+    <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="9a7f8c3d-4b2a-4e1f-9c5d-8a3b2c1d0e9f" data-blockingmode="auto" type="text/javascript"></script>
+    
     <!-- Google Analytics 4 -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-34QWVC87NE"></script>
     <script>
